--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 openssl = "0.10.68"
 prost = "0.13.4"
 prost-types = "0.13.4"
+quick-protobuf = "0.8.1"
 serde = "1.0.217"
 serde_json = "1.0.137"
 tungstenite = { version = "0.26.1", features = [ "native-tls" ] }
