--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
+base64 = "0.22.1"
 openssl = "0.10.68"
 prost = "0.13.4"
 prost-types = "0.13.4"
