--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ build = "build.rs"
 
 [dependencies]
 base64 = "0.22.1"
+chrono = "0.4.39"
+chrono-tz = "0.10.1"
 openssl = "0.10.68"
 prost = "0.13.4"
 prost-types = "0.13.4"
